--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,9 @@ repositories {
 
 jar{
     manifest{
-        attributes{
-            'Main-Class':'com.riwa.Bot',
-            'Class-Path':'build/libs/RiwaBot-1.0-SNAPSHOT.jar'
-        }
+        attributes(
+			 'Main-Class' : 'com.riwa.Bot'
+        )
     }
 }
 
