--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 jar{
     manifest{
         attributes(
-			 'Main-Class' : 'com.riwa.Bot'
+			 'Main-Class' : 'org.riwa.Bot'
         )
     }
 }
