--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
-    id 'maven'
 }
 
 
@@ -16,7 +15,7 @@ repositories {
 jar{
     manifest{
         attributes(
-			 'Main-Class' : 'org.riwa.Bot'
+			 'Main-Class' : 'com.riwa.Bot'
         )
     }
 }
