--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 jar{
     manifest{
         attributes(
-			 'Main-Class' : 'main.java.Bot'
+			 'Main-Class' : 'com.riwa.Bot'
         )
     }
 }
